--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .DS_Store
-node/currency_keys1.txt
-node/currency_keys2.txt
-node/harvester_keys.txt
+core-node/currency_keys1.txt
+core-node/currency_keys2.txt
+core-node/harvester_keys.txt
