added broker container

--- a/core-node/broker/Dockerfile
+++ b/core-node/broker/Dockerfile
@@ -1,6 +1,8 @@
 FROM crackthecode01/catapult-deps:latest as builder
+
+WORKDIR /usr/src/app
+
 ARG NODE_PATH=/usr/src/app/broker
 RUN mkdir -p ${NODE_PATH}
-WORKDIR ${NODE_PATH}
-ADD ./resources ${NODE_PATH}/resources
-CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.broker .
+
+CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.broker ./broker
