--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -4,10 +4,10 @@ port = 7900
 apiPort = 7901
 maxIncomingConnectionsPerIdentity = 3
 
-enableAddressReuse = false
+enableAddressReuse = true
 enableSingleThreadPool = false
 enableCacheDatabaseStorage = true
-enableAutoSyncCleanup = true
+enableAutoSyncCleanup = false
 
 enableTransactionSpamThrottling = true
 transactionSpamThrottlingMaxBoostFee = 10'000'000
