--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,11 @@ networks:
 
 services:
   dualnode:
-    build: ./core-node
+    build: ./core-node/peernode
     container_name: cat-dual-node
+    volumes:
+      - ./core-node/config/data/:/data:rw
+      - ./core-node/config/resources:/usr/src/app/node/resources
     expose:
       - 7900
       - 7902
@@ -31,7 +34,6 @@ services:
     networks:
       catapult-testnet-node:
         ipv4_address: 172.28.1.2
-
   rest:
     build: ./rest
     container_name: cat-rest-api
@@ -45,8 +47,17 @@ services:
     networks:
       catapult-testnet-node:
         ipv4_address: 172.28.1.3
-  # broker:
-  #   build: ./core-node/broker
-  #   container_name: cat-broker
-  #   depends_on:
-  #     - dualnode
+
+  broker:
+    build: ./core-node/broker
+    container_name: cat-broker
+    volumes:
+      - ./core-node/config/data/:/data:rw
+      - ./core-node/config/resources:/usr/src/app/broker/resources
+    depends_on:
+      - dualnode
+      - db
+      - rest
+    networks:
+      catapult-testnet-node:
+        ipv4_address: 172.28.1.4
