added inflated inflation model

--- a/core-node/config/nemesis/public-test.properties
+++ b/core-node/config/nemesis/public-test.properties
@@ -16,7 +16,7 @@ cppFileHeader =
 [output]
 
 cppFile = 
-binDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/node/seed
+binDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/core-node/config/seed
 
 [namespaces]
 
@@ -37,36 +37,44 @@ cat:harvest = true
 
 divisibility = 6
 duration = 0
-supply = 8'999'999'998'000'000
+supply = 7'832'975'000
 isTransferable = true
 isSupplyMutable = false
 isRestrictable = false
 
 [distribution>cat:currency]
 
-TDYZH7EWBA2XPUUWDAJOSJ7EWQXD6XYR7SN2WRAL = 409'090'909'000'000
-TCPYLFSCUPFDJAEAAS65B56JCO2F6A6DMYENBKZW = 409'090'909'000'000
-TA7EQBHPQT3JJT4SNMWMZKTQN4L4PXGGJYOO5I62 = 409'090'909'000'000
-TD3HM2K7N7RN5GYEAZIEY6USOYL5CSXYG4DZTLMD = 409'090'909'000'000
-TC5UZK25EZHYZGPWPPSQCMQCKI2UJ4RAFL5ZBEMA = 409'090'909'000'000
-TDQG35GUDQRID327YHJHZZFM3T6ZBZ5UQOJQCNZI = 409'090'909'000'000
-TDJCY7JA7WDSRBP3B6265CFSDIJSBHOLSLBIME7N = 409'090'909'000'000
-TC2BLQ4CELSBZS6F43VSSHJ2C4KIKZREZZ7IKSHI = 409'090'909'000'000
-TDKEGDNIJAJQ6TQPSRCKM6COSTSTGICNJAXG3QQC = 409'090'909'000'000
-TD4XICFFR4G7PTQ7M5PKRGLODQC36KDGJAIRCTLU = 409'090'909'000'000
-TATVMD4GKXAGCPN4FWB7IWQYRYVPHOI76AQSHFML = 409'090'909'000'000
+# NEMESIS FUNDS
 
-TC2BSDFKIA6UDIDMIFL3STVZMETS2Q65R7E32PIU = 409'090'909'000'000
-TDZP5F6NJRELIP6X2GTHPULILYGZJB7YLKLU5Y2Z = 409'090'909'000'000
-TAQUJEEH4HLKT5WTPY7UDNEGHWTI765WZCPA36VX = 409'090'909'000'000
-TBFKSITBLVG3B2PQ3XUAPS3BLJG22CYHWLGSQA54 = 409'090'909'000'000
-TBECWTLBBJ62R3XAFWFO466DNRQLUXH7U4MGFNOV = 409'090'909'000'000
-TDRWK5XV7A6UR43FIJZCUJWOW7N6XUEBVALKDPER = 409'090'909'000'000
-TCVRVWLB3XRSPCSZNHORHJJGXF4HILXERVUG6AFX = 409'090'909'000'000
-TDGASYMGSP3SFYSVESTRUEBX2P36V6MLHJXSV6VZ = 409'090'909'000'000
-TD373IHRZW6P43QSP6ALDHYDP4HYOBIMYDNY5BFO = 409'090'909'000'000
-TB5Z64FNHRJGC3KBA57XBETL2ZIZPEDCZ6SGSVJD = 409'090'909'000'000
-TBGH6NX6TUIN45HTHCMQCGHL5JUOIGDVUN6ATEO3 = 409'090'909'000'000
+# Supernode Rewards
+TDYZH7EWBA2XPUUWDAJOSJ7EWQXD6XYR7SN2WRAL = 32'850'000
+
+# Early Node Rewards Fund
+TCPYLFSCUPFDJAEAAS65B56JCO2F6A6DMYENBKZW = 1'875'000
+
+# NEM Ecosystem Bonus
+TA7EQBHPQT3JJT4SNMWMZKTQN4L4PXGGJYOO5I62 = 3'125'000
+
+# Reserved funds
+TD3HM2K7N7RN5GYEAZIEY6USOYL5CSXYG4DZTLMD = 2'021'776'613
+
+TDQG35GUDQRID327YHJHZZFM3T6ZBZ5UQOJQCNZI = 339'608'728
+TDJCY7JA7WDSRBP3B6265CFSDIJSBHOLSLBIME7N = 339'608'728
+TC2BLQ4CELSBZS6F43VSSHJ2C4KIKZREZZ7IKSHI = 339'608'728
+TDKEGDNIJAJQ6TQPSRCKM6COSTSTGICNJAXG3QQC = 339'608'728
+TD4XICFFR4G7PTQ7M5PKRGLODQC36KDGJAIRCTLU = 339'608'728
+TATVMD4GKXAGCPN4FWB7IWQYRYVPHOI76AQSHFML = 339'608'728
+TC2BSDFKIA6UDIDMIFL3STVZMETS2Q65R7E32PIU = 339'608'728
+TDZP5F6NJRELIP6X2GTHPULILYGZJB7YLKLU5Y2Z = 339'608'728
+TAQUJEEH4HLKT5WTPY7UDNEGHWTI765WZCPA36VX = 339'608'728
+TBFKSITBLVG3B2PQ3XUAPS3BLJG22CYHWLGSQA54 = 339'608'728
+TBECWTLBBJ62R3XAFWFO466DNRQLUXH7U4MGFNOV = 339'608'728
+TDRWK5XV7A6UR43FIJZCUJWOW7N6XUEBVALKDPER = 339'608'728
+TCVRVWLB3XRSPCSZNHORHJJGXF4HILXERVUG6AFX = 339'608'728
+TDGASYMGSP3SFYSVESTRUEBX2P36V6MLHJXSV6VZ = 339'608'728
+TD373IHRZW6P43QSP6ALDHYDP4HYOBIMYDNY5BFO = 339'608'728
+TB5Z64FNHRJGC3KBA57XBETL2ZIZPEDCZ6SGSVJD = 339'608'728
+TBGH6NX6TUIN45HTHCMQCGHL5JUOIGDVUN6ATEO3 = 339'608'728
 
 [mosaic>cat:harvest]
 
