--- a/core-node/config/resources/config-network.properties
+++ b/core-node/config/resources/config-network.properties
@@ -14,20 +14,19 @@ enableVerifiableReceipts = true
 currencyMosaicId = 0x688C'EAE6'2069'598B
 harvestingMosaicId = 0x37BF'6ED6'C57C'EE5B
 
-blockGenerationTargetTime = 15s
+blockGenerationTargetTime = 10s
 blockTimeSmoothingFactor = 3000
 
 importanceGrouping = 820
-importanceActivityPercentage = 5
+importanceActivityPercentage = 25
 maxRollbackBlocks = 1440
 maxDifficultyBlocks = 360
 defaultDynamicFeeMultiplier = 500
 
 maxTransactionLifetime = 6h
 maxBlockFutureTime = 500ms
-
-initialCurrencyAtomicUnits = 8'999'999'998'000'000
-maxMosaicAtomicUnits = 9'000'000'000'000'000
+initialCurrencyAtomicUnits = 7'832'974'989
+maxMosaicAtomicUnits = 8'999'999'999
 
 totalChainImportance = 21'000'000
 minHarvesterBalance = 10'000
@@ -35,7 +34,7 @@ maxHarvesterBalance = 3'000'000
 harvestBeneficiaryPercentage = 5
 
 blockPruneInterval = 360
-maxTransactionsPerBlock = 5'000
+maxTransactionsPerBlock = 25'000
 
 [plugin:catapult.plugins.accountlink]
 
@@ -43,14 +42,14 @@ dummy = to trigger plugin load
 
 [plugin:catapult.plugins.aggregate]
 
-maxTransactionsPerAggregate = 10'000
+maxTransactionsPerAggregate = 5'000
 maxCosignaturesPerAggregate = 15
 
 # multisig plugin is expected to do more advanced cosignature checks
 enableStrictCosignatureCheck = false
 enableBondedAggregateSupport = true
 
-maxBondedTransactionLifetime = 24h
+maxBondedTransactionLifetime = 8h
 
 [plugin:catapult.plugins.lockhash]
 
