--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -4,7 +4,7 @@ port = 7900
 apiPort = 7901
 maxIncomingConnectionsPerIdentity = 3
 
-enableAddressReuse = true
+enableAddressReuse = false
 enableSingleThreadPool = false
 enableCacheDatabaseStorage = true
 enableAutoSyncCleanup = false
