change harvest to currency

--- a/core-node/config/resources/config-network.properties
+++ b/core-node/config/resources/config-network.properties
@@ -12,7 +12,7 @@ enableVerifiableState = true
 enableVerifiableReceipts = true
 
 currencyMosaicId = 0x688C'EAE6'2069'598B
-harvestingMosaicId = 0x37BF'6ED6'C57C'EE5B
+harvestingMosaicId = 0x688C'EAE6'2069'598B
 
 blockGenerationTargetTime = 10s
 blockTimeSmoothingFactor = 3000
