--- a/core-node/config/resources/config-user.properties
+++ b/core-node/config/resources/config-user.properties
@@ -6,5 +6,7 @@ enableDelegatedHarvestersAutoDetection = true
 
 [storage]
 
-dataDirectory = /data
-pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
+#dataDirectory = /data
+dataDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/core-node/config/data
+# pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
+pluginsDirectory = /opt/catapult
