--- a/core-node/config/resources/config-user.properties
+++ b/core-node/config/resources/config-user.properties
@@ -6,7 +6,5 @@ enableDelegatedHarvestersAutoDetection = true
 
 [storage]
 
-#dataDirectory = /data
-dataDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/core-node/config/data
-# pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
-pluginsDirectory = /opt/catapult
+dataDirectory = /data
+pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
