moar fixy thingies

--- a/core-node/config/nemesis/public-test.properties
+++ b/core-node/config/nemesis/public-test.properties
@@ -22,7 +22,6 @@ binDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/core-no
 
 cat = true
 cat.currency = true
-cat.harvest = true
 
 [namespace>cat]
 
@@ -31,7 +30,6 @@ duration = 0
 [mosaics]
 
 cat:currency = true
-cat:harvest = true
 
 [mosaic>cat:currency]
 
@@ -74,23 +72,5 @@ TCVRVWLB3XRSPCSZNHORHJJGXF4HILXERVUG6AFX = 339'608'728
 TDGASYMGSP3SFYSVESTRUEBX2P36V6MLHJXSV6VZ = 339'608'728
 TD373IHRZW6P43QSP6ALDHYDP4HYOBIMYDNY5BFO = 339'608'728
 TB5Z64FNHRJGC3KBA57XBETL2ZIZPEDCZ6SGSVJD = 339'608'728
+# Namespace and Mosaic fund
 TBGH6NX6TUIN45HTHCMQCGHL5JUOIGDVUN6ATEO3 = 339'608'728
-
-[mosaic>cat:harvest]
-
-divisibility = 3
-duration = 0
-supply = 21'000'000
-isTransferable = true
-isSupplyMutable = true
-isRestrictable = false
-
-[distribution>cat:harvest]
-
-TAR36UPIXKQU2D6UXKYQJATNF5DN3Q3TZ363TWH6 = 3'000'000
-TAA244JRMV37OMZNBETLTLI2OFFMPUHUUDZVC6NK = 3'000'000
-TAYHBFXTJEVTW3GA67AIWHCL5UK7B7CBTU4YMJNW = 3'000'000
-TANPUMYUQ4T5N2UJC5GSGCYLPXS72HQGYUZNLR4N = 3'000'000
-TAOPAEYR7LI3FJVLENF3KV2TD4FK2OJKFCDCRJLC = 3'000'000
-TDAMGIHM6TKKDZKYHG37CIKRNGFC47ILGVASXAHP = 3'000'000
-TDOXHCVLH5RF3AQ4IMMQVWUPNI3DKEMW6WRH43VC = 3'000'000
