--- a/core-node/config/resources/config-network.properties
+++ b/core-node/config/resources/config-network.properties
@@ -30,7 +30,7 @@ maxMosaicAtomicUnits = 8'999'999'999
 
 totalChainImportance = 7'832'974'989
 minHarvesterBalance = 10'000
-maxHarvesterBalance = 3'000'000
+maxHarvesterBalance = 8'999'999'999
 harvestBeneficiaryPercentage = 5
 
 blockPruneInterval = 360
