--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -52,8 +52,8 @@ localNetworks = 127.0.0.1
 
 [localnode]
 
-host = 127.0.0.1
-friendlyName = friendly-node
+host =
+friendlyName =
 version = 0
 roles = Peer, Api
 
