--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -12,7 +12,7 @@ enableAutoSyncCleanup = false
 enableTransactionSpamThrottling = true
 transactionSpamThrottlingMaxBoostFee = 10'000'000
 
-maxBlocksPerSyncAttempt = 42
+maxBlocksPerSyncAttempt = 400
 maxChainBytesPerSyncAttempt = 100MB
 
 shortLivedCacheTransactionDuration = 10m
@@ -40,20 +40,20 @@ transactionElementTraceInterval = 10
 enableDispatcherAbortWhenFull = true
 enableDispatcherInputAuditing = true
 
-outgoingSecurityMode = None
-incomingSecurityModes = None
+outgoingSecurityMode = Signed
+incomingSecurityModes = None,Signed
 
 maxCacheDatabaseWriteBatchSize = 5MB
 maxTrackedNodes = 5'000
 
 # all hosts are trusted when list is empty
-trustedHosts =
-localNetworks = 127.0.0.1
+trustedHosts = 127.0.0.1
+localNetworks = 127.0.0.1,172.28.1.3
 
 [localnode]
 
 host =
-friendlyName =
+friendlyName = friendly-node-2 friendly-node-2
 version = 0
 roles = Peer, Api
 
