slightly changed config

--- a/core-node/config/resources/config-extensions-server.properties
+++ b/core-node/config/resources/config-extensions-server.properties
@@ -10,14 +10,14 @@ extension.mongo = false
 extension.zeromq = false
 
 # p2p extensions
-extension.eventsource = true
+extension.eventsource = false
 extension.harvesting = true
 extension.syncsource = true
 
 # common extensions
 extension.diagnostics = true
 extension.hashcache = true
-extension.networkheight = true
+extension.networkheight = false
 extension.nodediscovery = true
 extension.packetserver = true
 extension.pluginhandlers = true
