--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 *.DS_Store
-core-node/currency_keys1.txt
-core-node/currency_keys2.txt
-core-node/harvester_keys.txt
+core-node/currency_keys.txt
 core-node/config/inflation.py
