--- a/core-node/config/resources/config-user.properties
+++ b/core-node/config/resources/config-user.properties
@@ -8,3 +8,7 @@ enableDelegatedHarvestersAutoDetection = true
 
 dataDirectory = /data
 pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
+
+
+# dataDirectory = /Users/bader/Documents/TESTNET/catapult-community-testnet/core-node/config/data
+# pluginsDirectory = /opt/catapult/keccak
