--- a/core-node/peernode/Dockerfile
+++ b/core-node/peernode/Dockerfile
@@ -1,4 +1,4 @@
-FROM crackthecode01/catapult-deps:latest as builder
+FROM crackthecode01/catapult-deps:keccak-f3 as builder
 
 ARG BIN_DIR=/usr/src/app/deps/source/catapult-server/_build/bin
 
@@ -7,4 +7,4 @@ WORKDIR /usr/src/app
 RUN mkdir -p ./node
 EXPOSE 7900 7902
 
-CMD ls /data && /usr/src/app/deps/source/catapult-server/_build/bin/catapult.server ./node
+CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.server ./node
