--- a/rest/Dockerfile
+++ b/rest/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8.16.2-alpine3.10 as builder
 
 ARG REST_PATH=/usr/src/app/rest
-ENV HASHING_FUNCTION=sha3
+ENV HASHING_FUNCTION=keccak
 
 WORKDIR /usr/src/app
 
@@ -12,7 +12,7 @@ WORKDIR ${REST_PATH}
 # locking to known working commit
 RUN git reset --hard 8eb75b0723b4e1f4d23da6e0495456c4be483610
 ADD rest.json ${REST_PATH}/rest/resources/rest.json
-RUN pwd
+
 RUN chmod 744 ./yarn_setup.sh
 RUN ./yarn_setup.sh
 RUN mkdir -p /data/db
