new nemesis, better config.py

--- a/core-node/config/nemesis/public-test.properties
+++ b/core-node/config/nemesis/public-test.properties
@@ -33,9 +33,9 @@ cat:currency = true
 
 [mosaic>cat:currency]
 
-divisibility = 6
+divisibility = 0
 duration = 0
-supply = 7'832'975'000
+supply = 7'832'975'555'000'000
 isTransferable = true
 isSupplyMutable = false
 isRestrictable = false
@@ -54,24 +54,22 @@ TCH5CN5NXLH6GEP6QEBAWLZP7RE5XUGEIMLZLJDN = 1'875'000
 TD2ZXHMY7DLK3OHVHBC6LKMMIPXMOG63TXPPE76X = 3'125'000
 
 # Reserved funds
-TDBJDYTRK6G4NPHP4GFCLQV5NVPINS326OC5RNUS = 2'021'776'613
+TDBJDYTRK6G4NPHP4GFCLQV5NVPINS326OC5RNUS = 2'021'776'613'000'000
 
-TBO7H6PYHVN2WPBXZVKYIMC53IKR2KXZV54SLXHC = 339'608'728
-TCU3B6ZQK2T3WARCB7766BNH3HBL75OOT5IPBBGH = 339'608'728
-TAWFEBWCPL4DHT5NXHTWOHRFUR2SU5XKC5I2W2ZB = 339'608'728
-TCFPV2BQEMKOZYGLXS2N23MHAUEGKOQS3DRZBL77 = 339'608'728
-TAAMCYXXBSDHL4JF6R7PRETXCCRNNRRDVMNM2L32 = 339'608'728
-TBGKF3XLD5RMZBW3LBXQPUQQ7YE4YCUTP74ZUPJE = 339'608'728
-TBIANJBU2OOS4IBSJQJY4RXUT5EN75GGFSRAY2ZB = 339'608'728
-TDGW6DXTOOBV6FLODKPAQOZBVVETUD2VMKYTQ63G = 339'608'728
-TCIPPIT6O6IIEO2VSOAZZVEATYZUB3MJEOKKAABN = 339'608'728
-TAANUWPBUMU3RLFNJVAXJ333CUXI4U36UOKL3CJO = 339'608'728
-TCAIKX526H5UUS6K4S7YKY7ZJ6RGZSVUHRTQD4NM = 339'608'728
-TCB6DDHWH7STS2BL4NEBDUGB3VYEOYX7KD4IXR5Z = 339'608'728
-TAJ2P2SCSC5SQ2X2IFU5ZZPSNSHVE43PJX3Z4PKV = 339'608'728
-TC5VI6PA7YDLTKRIBWMV2QEEXYZEJC6JMZ4AZNHN = 339'608'728
-TDSDLHUDURTMPZC6SFUBFWCHT7BGTJX36VRVCL5Q = 339'608'728
-TDWKD6VSABNGEE677IXVE5GXEV6ZGZAAJQ2W3FK3 = 339'608'728
-
-# Namespace and Mosaic fund
-TB4FC6D7J5OSRUQ47OQS2B7AQNHIVKTOHXOKPJ7Z = 339'608'728
+TBO7H6PYHVN2WPBXZVKYIMC53IKR2KXZV54SLXHC = 339'608'728'000'000
+TCU3B6ZQK2T3WARCB7766BNH3HBL75OOT5IPBBGH = 339'608'728'000'000
+TAWFEBWCPL4DHT5NXHTWOHRFUR2SU5XKC5I2W2ZB = 339'608'728'000'000
+TCFPV2BQEMKOZYGLXS2N23MHAUEGKOQS3DRZBL77 = 339'608'728'000'000
+TAAMCYXXBSDHL4JF6R7PRETXCCRNNRRDVMNM2L32 = 339'608'728'000'000
+TBGKF3XLD5RMZBW3LBXQPUQQ7YE4YCUTP74ZUPJE = 339'608'728'000'000
+TBIANJBU2OOS4IBSJQJY4RXUT5EN75GGFSRAY2ZB = 339'608'728'000'000
+TDGW6DXTOOBV6FLODKPAQOZBVVETUD2VMKYTQ63G = 339'608'728'000'000
+TCIPPIT6O6IIEO2VSOAZZVEATYZUB3MJEOKKAABN = 339'608'728'000'000
+TAANUWPBUMU3RLFNJVAXJ333CUXI4U36UOKL3CJO = 339'608'728'000'000
+TCAIKX526H5UUS6K4S7YKY7ZJ6RGZSVUHRTQD4NM = 339'608'728'000'000
+TCB6DDHWH7STS2BL4NEBDUGB3VYEOYX7KD4IXR5Z = 339'608'728'000'000
+TAJ2P2SCSC5SQ2X2IFU5ZZPSNSHVE43PJX3Z4PKV = 339'608'728'000'000
+TC5VI6PA7YDLTKRIBWMV2QEEXYZEJC6JMZ4AZNHN = 339'608'728'000'000
+TDSDLHUDURTMPZC6SFUBFWCHT7BGTJX36VRVCL5Q = 339'608'728'000'000
+TDWKD6VSABNGEE677IXVE5GXEV6ZGZAAJQ2W3FK3 = 339'608'728'000'000
+TB4FC6D7J5OSRUQ47OQS2B7AQNHIVKTOHXOKPJ7Z = 339'608'728'000'000
