--- a/core-node/config/resources/config-network.properties
+++ b/core-node/config/resources/config-network.properties
@@ -25,12 +25,12 @@ defaultDynamicFeeMultiplier = 500
 
 maxTransactionLifetime = 6h
 maxBlockFutureTime = 500ms
-initialCurrencyAtomicUnits = 7'832'974'989
-maxMosaicAtomicUnits = 8'999'999'999
+initialCurrencyAtomicUnits = 7'795'125'026'850'000
+maxMosaicAtomicUnits = 9'000'000'000'000'000
 
-totalChainImportance = 7'832'974'989
+totalChainImportance = 7'795'125'026'850'000
 minHarvesterBalance = 10'000
-maxHarvesterBalance = 8'999'999'999
+maxHarvesterBalance =  9'000'000'000'000'000
 harvestBeneficiaryPercentage = 5
 
 blockPruneInterval = 360
