--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -19,7 +19,6 @@ shortLivedCacheTransactionDuration = 10m
 shortLivedCacheBlockDuration = 100m
 shortLivedCachePruneInterval = 90s
 shortLivedCacheMaxSize = 200'000
-
 minFeeMultiplier = 100
 transactionSelectionStrategy = maximize-fee
 unconfirmedTransactionsCacheMaxResponseSize = 20MB
@@ -53,7 +52,7 @@ localNetworks = 127.0.0.1,172.28.1.3
 [localnode]
 
 host =
-friendlyName =
+friendlyName = friendly-node-2
 version = 0
 roles = Api, Peer
 
