--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -52,7 +52,7 @@ localNetworks = 127.0.0.1,172.28.1.3
 [localnode]
 
 host =
-friendlyName = friendly-node-2
+friendlyName =
 version = 0
 roles = Api, Peer
 
