--- a/core-node/config/nemesis/public-test.properties
+++ b/core-node/config/nemesis/public-test.properties
@@ -33,9 +33,9 @@ cat:currency = true
 
 [mosaic>cat:currency]
 
-divisibility = 0
+divisibility = 6
 duration = 0
-supply = 7'832'975'555'000'000
+supply = 7'832'975'000'000'000
 isTransferable = true
 isSupplyMutable = false
 isRestrictable = false
@@ -45,13 +45,13 @@ isRestrictable = false
 # NEMESIS FUNDS
 
 # Supernode Rewards
-TD5O7NDAHWWFY5QKRZULAG7TA2YNR4TWHGUIQMH2 = 32'850'000
+TD5O7NDAHWWFY5QKRZULAG7TA2YNR4TWHGUIQMH2 = 32'850'000'000'000
 
 # Early Node Rewards Fund
-TCH5CN5NXLH6GEP6QEBAWLZP7RE5XUGEIMLZLJDN = 1'875'000
+TCH5CN5NXLH6GEP6QEBAWLZP7RE5XUGEIMLZLJDN = 1'875'000'000'000
 
 # NEM Ecosystem Bonus
-TD2ZXHMY7DLK3OHVHBC6LKMMIPXMOG63TXPPE76X = 3'125'000
+TD2ZXHMY7DLK3OHVHBC6LKMMIPXMOG63TXPPE76X = 3'125'000'000'000
 
 # Reserved funds
 TDBJDYTRK6G4NPHP4GFCLQV5NVPINS326OC5RNUS = 2'021'776'613'000'000
