--- a/core-node/config/resources/config-inflation.properties
+++ b/core-node/config/resources/config-inflation.properties
@@ -1,18 +1,20 @@
 [inflation]
 
-starting-at-height-1 = 12617
-starting-at-height-8640 = 12078
-starting-at-height-17280 = 5781
-starting-at-height-25920 = 3689
-starting-at-height-34560 = 2648
-starting-at-height-43200 = 2028
-starting-at-height-51840 = 1618
-starting-at-height-60480 = 1327
-starting-at-height-69120 = 1112
-starting-at-height-77760 = 946
-starting-at-height-86400 = 815
-starting-at-height-95040 = 709
-starting-at-height-103680 = 622
-starting-at-height-112320 = 550
-starting-at-height-120960 = 44
-starting-at-height-129600 = 0
+starting-at-height-1 = 100170000
+starting-at-height-8640 = 12078000
+starting-at-height-17280 = 5781000
+starting-at-height-25920 = 3689000
+starting-at-height-34560 = 2648000
+starting-at-height-43200 = 2028000
+starting-at-height-51840 = 1618000
+starting-at-height-60480 = 1327000
+starting-at-height-69120 = 1112000
+starting-at-height-77760 = 946000
+starting-at-height-86400 = 935337
+starting-at-height-95040 = 815000
+starting-at-height-103680 = 709000
+starting-at-height-112320 = 622000
+starting-at-height-120960 = 550000
+starting-at-height-129600 = 44000
+starting-at-height-129601 = 8319
+starting-at-height-129602 = 0
