--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -7,25 +7,26 @@ maxIncomingConnectionsPerIdentity = 3
 enableAddressReuse = false
 enableSingleThreadPool = false
 enableCacheDatabaseStorage = true
-enableAutoSyncCleanup = false
+enableAutoSyncCleanup = true
 
 enableTransactionSpamThrottling = true
 transactionSpamThrottlingMaxBoostFee = 10'000'000
 
-maxBlocksPerSyncAttempt = 400
+maxBlocksPerSyncAttempt = 42
 maxChainBytesPerSyncAttempt = 100MB
 
 shortLivedCacheTransactionDuration = 10m
 shortLivedCacheBlockDuration = 100m
 shortLivedCachePruneInterval = 90s
-shortLivedCacheMaxSize = 200'000
-minFeeMultiplier = 100
-transactionSelectionStrategy = maximize-fee
-unconfirmedTransactionsCacheMaxResponseSize = 20MB
-unconfirmedTransactionsCacheMaxSize = 50'000
+shortLivedCacheMaxSize = 10'000'000
 
-connectTimeout = 15s
-syncTimeout = 120s
+minFeeMultiplier = 0
+transactionSelectionStrategy = oldest
+unconfirmedTransactionsCacheMaxResponseSize = 20MB
+unconfirmedTransactionsCacheMaxSize = 1'000'000
+
+connectTimeout = 10s
+syncTimeout = 60s
 
 socketWorkingBufferSize = 512KB
 socketWorkingBufferSensitivity = 100
@@ -36,25 +37,27 @@ blockElementTraceInterval = 1
 transactionDisruptorSize = 16384
 transactionElementTraceInterval = 10
 
-enableDispatcherAbortWhenFull = false
+enableDispatcherAbortWhenFull = true
 enableDispatcherInputAuditing = true
 
-outgoingSecurityMode = Signed
-incomingSecurityModes = None,Signed
+outgoingSecurityMode = None
+incomingSecurityModes = None
 
 maxCacheDatabaseWriteBatchSize = 5MB
 maxTrackedNodes = 5'000
 
+batchVerificationRandomSource = /dev/urandom
+
 # all hosts are trusted when list is empty
-trustedHosts = 127.0.0.1
-localNetworks = 127.0.0.1,172.28.1.3
+trustedHosts =
+localNetworks = 127.0.0.1
 
 [localnode]
 
 host =
-friendlyName =
+friendlyName =cool-node
 version = 0
-roles = Api, Peer
+roles = Peer
 
 [outgoing_connections]
 
