--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -7,7 +7,7 @@ maxIncomingConnectionsPerIdentity = 3
 enableAddressReuse = false
 enableSingleThreadPool = false
 enableCacheDatabaseStorage = true
-enableAutoSyncCleanup = true
+enableAutoSyncCleanup = false
 
 enableTransactionSpamThrottling = true
 transactionSpamThrottlingMaxBoostFee = 10'000'000
@@ -18,15 +18,15 @@ maxChainBytesPerSyncAttempt = 100MB
 shortLivedCacheTransactionDuration = 10m
 shortLivedCacheBlockDuration = 100m
 shortLivedCachePruneInterval = 90s
-shortLivedCacheMaxSize = 10'000'000
+shortLivedCacheMaxSize = 200'000
 
-minFeeMultiplier = 0
-transactionSelectionStrategy = oldest
+minFeeMultiplier = 100
+transactionSelectionStrategy = maximize-fee
 unconfirmedTransactionsCacheMaxResponseSize = 20MB
-unconfirmedTransactionsCacheMaxSize = 1'000'000
+unconfirmedTransactionsCacheMaxSize = 50'000
 
-connectTimeout = 10s
-syncTimeout = 60s
+connectTimeout = 15s
+syncTimeout = 120s
 
 socketWorkingBufferSize = 512KB
 socketWorkingBufferSensitivity = 100
@@ -40,8 +40,8 @@ transactionElementTraceInterval = 10
 enableDispatcherAbortWhenFull = true
 enableDispatcherInputAuditing = true
 
-outgoingSecurityMode = None
-incomingSecurityModes = None
+outgoingSecurityMode = Signed
+incomingSecurityModes = None,Signed
 
 maxCacheDatabaseWriteBatchSize = 5MB
 maxTrackedNodes = 5'000
@@ -49,15 +49,15 @@ maxTrackedNodes = 5'000
 batchVerificationRandomSource = /dev/urandom
 
 # all hosts are trusted when list is empty
-trustedHosts =
-localNetworks = 127.0.0.1
+trustedHosts = 127.0.0.1
+localNetworks = 127.0.0.1,172.28.1.3
 
 [localnode]
 
 host =
-friendlyName =cool-node
+friendlyName =
 version = 0
-roles = Peer
+roles = Api, Peer
 
 [outgoing_connections]
 
