--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "harvesterKey": "",
     "bootKey": "",
     "apiKey": "",
-    "nodeName": "cool-node",
+    "nodeName": "",
     "clientPk": ""
 }
