--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -55,7 +55,7 @@ localNetworks = 127.0.0.1,172.28.1.3
 [localnode]
 
 host =
-friendlyName =
+friendlyName =cool-node
 version = 0
 roles = Api, Peer
 
