--- a/core-node/config/resources/config-database.properties
+++ b/core-node/config/resources/config-database.properties
@@ -1,6 +1,6 @@
 [database]
 
-databaseUri = mongodb://db:27017
+databaseUri = mongodb://127.0.0.1:27017
 databaseName = catapult
 maxWriterThreads = 8
 
