--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
     container_name: cat-dual-node
     volumes:
       - ./core-node/config/data/:/data:rw
+      - ./core-node/config/certs/:/usr/src/app/certs:rw
       - ./core-node/config/resources:/usr/src/app/node/resources
     expose:
       - 7900
@@ -44,6 +45,9 @@ services:
     depends_on:
       - db
       - dualnode
+    volumes:
+      - ./core-node/config/certs/:/usr/src/app/certs:rw
+      - ./core-node/config/resources:/resources:rw
     networks:
       catapult-testnet-node:
         ipv4_address: 172.28.1.3
@@ -53,6 +57,7 @@ services:
     container_name: cat-broker
     volumes:
       - ./core-node/config/data/:/data:rw
+      - ./core-node/config/certs/:/usr/src/app/certs:rw
       - ./core-node/config/resources:/usr/src/app/broker/resources
     depends_on:
       - dualnode
