making sure paths are valid

--- a/core-node/config/resources/config-user.properties
+++ b/core-node/config/resources/config-user.properties
@@ -6,4 +6,4 @@ enableDelegatedHarvestersAutoDetection = true
 
 dataDirectory = /data
 pluginsDirectory = /usr/src/app/deps/source/catapult-server/_build/bin
-certificateDirectory = /usr/src/app/certs
+certificateDirectory = /certs
