--- a/core-node/broker/Dockerfile
+++ b/core-node/broker/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /usr/src/app
 ARG NODE_PATH=/usr/src/app/broker
 RUN mkdir -p ${NODE_PATH}
 
-CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.broker ./broker
+CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.broker /
