--- a/core-node/peernode/Dockerfile
+++ b/core-node/peernode/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /usr/src/app
 RUN mkdir -p ./node
 EXPOSE 7900 7902
 
-CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.server ./node
+CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.server /
