--- a/core-node/config/resources/config-node.properties
+++ b/core-node/config/resources/config-node.properties
@@ -51,7 +51,7 @@ localNetworks = 127.0.0.1,172.28.1.3
 [localnode]
 
 host =
-friendlyName =cool-node
+friendlyName =
 version = 0
 roles = Api, Peer
 
