--- a/rest/Dockerfile
+++ b/rest/Dockerfile
@@ -5,7 +5,7 @@ ARG REST_PATH=/usr/src/app/rest
 WORKDIR /usr/src/app
 
 RUN apk add --no-cache --update git python python3 gcc build-base zeromq-dev
-RUN git clone https://github.com/nemtech/catapult-rest.git rest
+RUN git clone https://github.com/nemtech/catapult-rest.git --branch task/vrf-lock rest
 WORKDIR ${REST_PATH}
 ADD rest.json ${REST_PATH}/rest/resources/rest.json
 
