--- a/core-node/broker/Dockerfile
+++ b/core-node/broker/Dockerfile
@@ -1,8 +1,11 @@
-FROM crackthecode01/catapult-deps:v0.9.5.1 as builder
+FROM crackthecode01/symbol-deps:0951-broker-patch as builder
 
 WORKDIR /usr/src/app
 
 ARG NODE_PATH=/usr/src/app/broker
 RUN mkdir -p ${NODE_PATH}
+RUN apt update -y && apt install iputils-ping -y
+ADD wait-for-restore.sh .
+RUN chmod 744 wait-for-restore.sh
 
-CMD /usr/src/app/deps/source/catapult-server/_build/bin/catapult.broker /
+CMD ./wait-for-restore.sh
